--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,12 @@
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "build:tailwind": "tailwindcss build src/scss/tailwind.scss -o src/scss/tailwind.output.scss",
-    "prestart": "npm run build:tailwind",
-    "prebuild": "npm run build:tailwind",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
