--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-scripts": "5.0.1",
+    "react-vis-ts": "^0.0.3",
     "sass": "^1.70.0",
     "typescript": "^4.9.5"
   },
