--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.73",
     "@types/react": "^18.2.48",
@@ -10,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "react-vis-ts": "^0.0.3",
     "sass": "^1.70.0",
