--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-vis-ts": "^0.0.3",
     "sass": "^1.70.0",
