--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.3",
+		"lodash": "^4.17.21",
 		"nodemon": "^3.1.0",
 		"pg-hstore": "^2.3.4",
 		"pg-promise": "^11.5.4",
@@ -22,6 +23,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/lodash": "^4.17.5",
 		"@types/node": "^20.11.21"
 	}
 }
