--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.27.0",
     "react-vis-ts": "^0.0.3",
     "sass": "^1.70.0",
     "typescript": "^4.9.5"
